--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^11.2"
+    },
+    "scripts": {
+        "test": "phpunit tests --colors"
     }
 }
