--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,6 @@
         "test": "phpunit tests --colors"
     },
     "require": {
-        "php": "^8.2"
+        "php": "8.1.2 || ^8.2"
     }
 }
